--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy" : "ng build --prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -15,15 +16,18 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/fire": "^5.1.3",
+    "@angular/fire": "^5.2.0-beta.3",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "angularfire2": "^4.0.0-rc.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+    "angularfire2": "^5.1.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "firebase": "^4.2.0",
+    "firebase": "^6.0.2-0",
+    "firebase-tools": "^6.9.2",
+    "g": "^2.0.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
