--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy" : "firebase deploy"
+    "deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +28,7 @@
     "firebase": "^6.0.2-0",
     "firebase-tools": "^6.9.2",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
