--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+    "angular5-data-table": "^1.0.3",
     "angularfire2": "^5.1.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
